implement all database entities
