# src/entities/index.ts
@@ -1,1 +1,6 @@
-export { default as Question } from "./question.entity";
+export { default as Post } from "./post.entity";
+export { default as User } from "./user.entity";
+export { default as Content } from "./content.entity";
+export { default as Tag } from "./tag.entity";
+export { default as Comment } from './comment.entity'
+export { default as Vote } from './vote.entity'
